--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
   </dependencies>
   <build>
     <plugins>
-      <plugin>
+     <!-- <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.5.1</version>
         <configuration>
@@ -79,7 +79,18 @@
         <configuration>
           <path>/</path>
         </configuration>
-      </plugin>
+      </plugin> -->
+	  
+	  <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-war-plugin</artifactId>
+		<version>3.3.1</version>
+	</plugin>
+	<plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.8.1</version>
+	</plugin>
     </plugins>
   </build>
 </project>
