--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
   <packaging>war</packaging>
   <properties>
     <failOnMissingWebXml>false</failOnMissingWebXml>
+         <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>	  
   </properties>
 
   <dependencies>
